--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,8 +4,8 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="19" />
@@ -13,8 +13,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-         >
+        android:label="@string/app_name" >
         <activity
             android:name="com.xyx.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -26,6 +25,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.xyx.AstroDetailsActivity"
+            android:label="@string/title_activity_astro_details">
+        </activity>
+
     </application>
 
 </manifest>
