--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,6 +5,7 @@
     android:versionName="1.0" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -15,7 +16,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name="com.xyx.MainActivity"
+            android:name="com.xyx.activity.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@style/FullscreenTheme" >
@@ -26,7 +27,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.xyx.AstroDetailsActivity"
+            android:name="com.xyx.activity.AstroDetailsActivity"
             android:label="@string/title_activity_astro_details">
         </activity>
 
