--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,8 +7,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>        
-        
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="19" />
@@ -30,9 +30,12 @@
         </activity>
         <activity
             android:name="com.xyx.activity.AstroDetailsActivity"
-            android:label="@string/title_activity_astro_details">
+            android:label="@string/title_activity_astro_details" >
         </activity>
-
+        <activity
+            android:name="com.xyx.activity.AstroDetailsMoreActivity"
+            android:label="@string/title_activity_astro_details_more" >
+        </activity>
     </application>
 
 </manifest>
