--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="19" />
 
     <application
@@ -32,7 +32,7 @@
       
         <activity 
             android:name="com.xyx.activity.AstroDetailsViewPager"
-            android:label="@string/astroViewPager"></activity>
+            android:label="@string/astroViewPager"/>
     </application>
 
 </manifest>
